// =========================================================
// Library Management System — dbdiagram.io schema
// =========================================================

Table books {
  id            int           [pk, increment]
  title         varchar(255)  [not null]
  author        varchar(150)  [not null]
  isbn          varchar(20)   [not null, unique]
  available_quantity int      [not null, default: 0]
  shelf_location varchar(100) [not null]
  deleted_at    timestamp     [null]
  created_at    timestamp     [not null, default: `now()`]
  updated_at    timestamp     [not null, default: `now()`]

  indexes {
    title        [name: 'idx_books_title', type: btree]
    author       [name: 'idx_books_author', type: btree]
    isbn         [name: 'idx_books_isbn', unique]
    deleted_at   [name: 'idx_books_deleted_at']
  }
}

Table users {
  id              int          [pk, increment]
  name            varchar(150) [not null]
  email           varchar(255) [not null, unique]
  registered_date timestamp    [not null, default: `now()`]
  deleted_at      timestamp    [null]
  created_at      timestamp    [not null, default: `now()`]
  updated_at      timestamp    [not null, default: `now()`]

  indexes {
    email      [name: 'idx_users_email', unique]
    deleted_at [name: 'idx_users_deleted_at']
  }
}

Table borrowing_records {
  id            int        [pk, increment]
  book_id       int        [not null, ref: > books.id]
  user_id   int        [not null, ref: > users.id]
  checkout_date timestamp  [not null, default: `now()`]
  due_date      timestamp  [not null]
  return_date   timestamp  [null]
  status        varchar(20) [not null, default: 'checked_out', note: 'checked_out | returned | overdue']
  created_at    timestamp  [not null, default: `now()`]
  updated_at    timestamp  [not null, default: `now()`]

  indexes {
    user_id              [name: 'idx_br_user_id']
    book_id                  [name: 'idx_br_book_id']
    status                   [name: 'idx_br_status']
    due_date                 [name: 'idx_br_due_date']
    (user_id, status)    [name: 'idx_br_user_status']
    (book_id, status)        [name: 'idx_br_book_status']
  }
}
